--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
 
 }
