--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,13 @@ package="com.example.finalproject">
     <!--</activity>-->
     <!--<activity android:name=".ui.messages.MessageActivity">-->
     <!--</activity>-->
-    <activity android:name=".ui.MainActivity">
+    <activity android:name=".ui.MainActivity" android:screenOrientation="portrait">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+
     </activity>
     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
